--- a/app/views/home/_admin_dashboard.html.erb
+++ b/app/views/home/_admin_dashboard.html.erb
@@ -2,7 +2,8 @@
 
 <%= render "registration_by_month_script" %>
 <%= render "rating_histogram_script" %>
-<%= render "camp_demand_script" %>
+<%= render "registration_by_curriculum_script" %>
+<%= render "registration_by_location_script" %>
 
 <div class="row">
   <div class="col s6">
@@ -15,7 +16,10 @@
 
 <div class="row">
   <div class="col s6">
-    <div id="camp-demand-graph" style="min-width: 300px; height: 400px; max-width: 600px; margin: 0 auto"></div>
+    <div id="registration-by-curriculum-graph" style="min-width: 300px; height: 400px; max-width: 600px; margin: 0 auto"></div>
+  </div>
+  <div class="col s6">
+    <div id="registration-by-location-graph" style="min-width: 300px; height: 400px; max-width: 600px; margin: 0 auto"></div>
   </div>
 </div>
 
