--- a/app/views/home/_rating_histogram_script.html.erb
+++ b/app/views/home/_rating_histogram_script.html.erb
@@ -17,7 +17,7 @@ $(function() {
     yAxis: [{
         title: { text: 'Rating' }
     }, {
-        title: { text: 'Percentage' },
+        title: { text: 'Amount' },
         opposite: true
     }],
 
