--- a/app/views/home/_registrations_list.html.erb
+++ b/app/views/home/_registrations_list.html.erb
@@ -2,7 +2,7 @@
 <% if registrations.empty? %>
   <p>There are no <%= state.downcase %> camps for your children.</p>
 <% else %>
-  <table>
+  <table class="striped highlight">
     <thead>
       <tr>
         <th>Camp Name</th>
