--- a/app/views/camps/_active_camps.html.erb
+++ b/app/views/camps/_active_camps.html.erb
@@ -3,7 +3,7 @@
 <% else %>
   <h3>Active Camps</h3>
 
-  <table>
+  <table class="striped highlight">
   <thead>
     <tr>
       <th>Name</th>
@@ -12,7 +12,7 @@
       <th>Max Students</th>
       <th>Remaining Slots</th>
       <% if can? :update, Camp %>
-      <th colspan="3"></th>
+      <th>Options</th>
       <% end %>
     </tr>
   </thead>
@@ -26,7 +26,11 @@
         <td><%= camp.max_students %></td>
         <td><%= camp.max_students - camp.registrations.count %></td>
         <% if can? :update, Camp %>
-        <td><%= link_to 'Edit', edit_camp_path(camp), :class=>"btn waves-effect waves-light" %></td>
+        <td>
+          <%= link_to edit_camp_path(camp) do %>
+              <i class="material-icons">edit</i>
+          <% end %>
+        </td>
         <% end %>
       </tr>
     <% end %>
