--- a/app/views/camps/_camp_family_students.html.erb
+++ b/app/views/camps/_camp_family_students.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <div class="card">
+  <div class="card yellow lighten-5">
     <div class="card-content">
       <span class="card-title">Your Qualified Students</span>
       <% if @eligilble_students.empty? %>
