--- a/app/views/camps/_camp_family_students_vue.html.erb
+++ b/app/views/camps/_camp_family_students_vue.html.erb
@@ -1,6 +1,6 @@
 <div id="registrations">
   <%= hidden_field_tag "camp_id", @camp.id %>
-  <div class="card">
+  <div class="card yellow lighten-5">
     <div class="card-content">
       <span class="card-title">Add Students to Cart</span>
       <% if @eligilble_students.empty? %>
