--- a/app/views/camps/_camp_instructors_vue.html.erb
+++ b/app/views/camps/_camp_instructors_vue.html.erb
@@ -1,6 +1,6 @@
 <div id="assignments">
   <%= hidden_field_tag "camp_id", @camp.id %>
-  <div class="card">
+  <div class="card yellow lighten-5">
     <div class="card-content">
       <span class="card-title">Camp Instructors</span>
       <% if @camp.instructors.empty? %>
