--- a/app/views/camps/_camp_students_no_link.html.erb
+++ b/app/views/camps/_camp_students_no_link.html.erb
@@ -5,7 +5,7 @@
       <% if @students.empty? %>
   		  <p>No registered students at this time</p>
   	  <% else %>
-    	  <table>
+    	  <table class="striped highlight">
           <thead>
             <tr>
               <th>Name</th>
