--- a/app/views/camps/_inactive_camps.html.erb
+++ b/app/views/camps/_inactive_camps.html.erb
@@ -3,7 +3,7 @@
 <% else %>
   <h3>Inactive Camps</h3>
 <table>
-  <thead>
+  <thead class="striped highlight">
     <tr>
       <th>Name</th>
       <th>Start Date</th>
@@ -11,7 +11,7 @@
       <th>Max Students</th>
       <th>Remaining Slots</th>
       <% if can? :update, Camp %>
-      <th colspan="3"></th>
+      <th>Options</th>
       <% end %>
     </tr>
   </thead>
@@ -25,7 +25,11 @@
         <td><%= camp.max_students %></td>
         <td><%=camp.max_students - camp.registrations.count %></td>
         <% if can? :update, Camp %>
-        <td><%= link_to 'Edit', edit_camp_path(camp), :class=>"btn waves-effect waves-light" %></td>
+        <td>
+          <%= link_to edit_camp_path(camp) do %>
+              <i class="material-icons">edit</i>
+          <% end %>
+        </td>
         <% end %>
       </tr>
     <% end %>
