--- a/app/views/carts/_form.html.erb
+++ b/app/views/carts/_form.html.erb
@@ -1,14 +1,15 @@
 <%= simple_form_for(@registration, :url => checkout_path) do |f| %>
   <%= f.error_notification %>
   <div class="row">
-    <div class="form-inputs col s7">
+    <div class="form-inputs">
       <%= f.input :credit_card_number, label_html: { class: 'active' } %>
       <%= f.input :expiration_year, label_html: { class: 'active' } %>
       <%= f.input :expiration_month, label_html: { class: 'active' } %>
     </div>
-    <div class="form-actions col s5">
+  </div>
+  <div class="row">
+    <div class="form-actions">
       <%= f.button :submit, "Pay Now" %>
     </div>
   </div>
-    
 <% end %>
