--- a/app/views/curriculums/index.html.erb
+++ b/app/views/curriculums/index.html.erb
@@ -5,14 +5,14 @@
 <% else %>
   <h3>Curriculums</h3>
 
-  <table>
+  <table class="striped highlight">
   <thead>
     <tr>
       <th>Name</th>
       <th>Ratings</th>
       <th>Times Used</th>
       <% if can? :update, Curriculum %>
-      <th colspan="3"></th>
+      <th>Options</th>
       <% end %>
     </tr>
   </thead>
@@ -24,7 +24,11 @@
         <td><%= curriculum.min_rating == 0 ? "Unrated" : curriculum.min_rating %> - <%= curriculum.max_rating %></td>
         <td><%= Camp.for_curriculum(curriculum.id).size %></td>
         <% if can? :update, Curriculum %>
-        <td><%= link_to 'Edit', edit_curriculum_path(curriculum), :class=>"btn waves-effect waves-light" %></td>
+        <td>
+          <%= link_to edit_curriculum_path(curriculum) do %>
+            <i class="material-icons">edit</i>
+          <% end %>
+        </td>
         <% end %>
       </tr>
     <% end %>
@@ -32,6 +36,7 @@
 </table>
 
     <% end %>
+<br/>
 <% if can? :create, Curriculum %>
   <%= link_to(eval("new_curriculum_path"), class: "btn waves-effect waves-light") do %>
     &nbsp;Add a New Curriculum
