--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -5,36 +5,39 @@
 <% else %>
   <h3>Families</h3>
 
-  <table>
-  <thead>
-    <tr>
-      <th>Family Name</th>
-      <th>Parent First Name</th>
-      <th>Email</th>
-      <th>Phone</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @families.each do |family| %>
+  <table class="striped highlight">
+    <thead>
       <tr>
-        <td><%= link_to family.family_name, family %></td>
-        <td><%= family.parent_first_name %></td>
-        <td><%= family.email %></td>
-        <td><%= number_to_phone family.phone %></td>
-        <td><%= link_to 'Edit', edit_family_path(family), :class=>"btn waves-effect waves-light" %></td>
+        <th>Family Name</th>
+        <th>Parent First Name</th>
+        <th>Email</th>
+        <th>Phone</th>
+        <th>Options</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+  
+    <tbody>
+      <% @families.each do |family| %>
+        <tr>
+          <td><%= link_to family.family_name, family %></td>
+          <td><%= family.parent_first_name %></td>
+          <td><%= family.email %></td>
+          <td><%= number_to_phone family.phone %></td>
+          <td>
+            <%= link_to edit_family_path(family) do %>
+              <i class="material-icons">edit</i>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<span class="paginate">
-  <%= will_paginate @families, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next", :param_name => 'page' %>
-</span>
-
-    <% end %>
-
+  <span class="paginate">
+    <%= will_paginate @families, :previous_label => "Previous&nbsp;", :next_label => "&nbsp;Next", :param_name => 'page' %>
+  </span>
+<% end %>
+<br/>
 <%= link_to(eval("new_family_path"), class: "btn waves-effect waves-light") do %>
   &nbsp;Add a New Family
 <% end %>
