--- a/app/views/instructors/index.html.erb
+++ b/app/views/instructors/index.html.erb
@@ -5,13 +5,13 @@
 <% else %>
   <h3>Instructors</h3>
 
-  <table>
+  <table class="striped highlight">
   <thead>
     <tr>
       <th>Name</th>
       <th>Phone</th>
       <th>Camps</th>
-      <th colspan="3"></th>
+      <th>Options</th>
     </tr>
   </thead>
 
@@ -21,7 +21,11 @@
         <td><%= link_to instructor.name, instructor %></td>
         <td><%= number_to_phone instructor.phone %></td>
         <td><%= instructor.camps.size %></td>
-        <td><%= link_to 'Edit', edit_instructor_path(instructor), :class=>"btn waves-effect waves-light" %></td>
+        <td>
+          <%= link_to edit_instructor_path(instructor) do %>
+            <i class="material-icons">edit</i>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
@@ -32,7 +36,8 @@
 </span>
 
     <% end %>
-
+    
+<br/>
 <%= link_to(eval("new_instructor_path"), class: "btn waves-effect waves-light") do %>
   &nbsp;Add a New Instructor
 <% end %>
