--- a/app/views/students/_students_list.html.erb
+++ b/app/views/students/_students_list.html.erb
@@ -4,14 +4,14 @@
   <p id="notice"><%= notice %></p>
   <h3><%= state %> Students</h3>
 
-  <table>
+  <table class="striped highlight">
     <thead>
       <tr>
         <th>Name</th>
         <th>Date of Birth</th>
         <th>Rating</th>
         <% if can? :update, Student %>
-        <th colspan="3"></th>
+        <th>Options</th>
         <% end %>
       </tr>
     </thead>
@@ -22,8 +22,13 @@
           <td><%= link_to student.name, student %></td>
           <td><%= display_date(student.date_of_birth) %></td>
           <td><%= student.rating %></td>
+          
           <% if can? :update, Student %>
-          <td><%= link_to 'Edit', edit_student_path(student), :class=>"btn waves-effect waves-light" %></td>
+          <td>
+            <%= link_to edit_student_path(student, family_id: student.family.id) do %>
+                <i class="material-icons">edit</i>
+            <% end %>
+          </td>
           <% end %>
         </tr>
       <% end %>
