--- a/app/views/partials/_index_structure.html.erb
+++ b/app/views/partials/_index_structure.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col s12 center">
+  <div class="col s12">
     <!-- primary partial gets displayed here in main div -->
     <%= render partial: "#{primary}" %>
     <!-- sometimes we want another partial below -->
@@ -11,7 +11,7 @@
   </div>
 
   <br></br>
-  <div class="col s3 center">
+  <div class="col s3">
     <!-- Add a button for new instances of object -->
     <% if can? :create, model_name %>
       <%= link_to(eval("new_#{model_name}_path"), class: "btn waves-effect waves-light") do %>
